Refactor product management to use DTOs and ModelMapper
Reworked Product endpoints to incorporate request and response DTOs for better encapsulation. Introduced ModelMapper for mapping between entities and DTOs, and updated tests and configuration accordingly. Also streamlined OpenAPI documentation and added relevant dependencies.